add missing exchanges for CGXII #5

--- a/code/curation/wetlab_transfer.ipynb
+++ b/code/curation/wetlab_transfer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,22 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_and_annotate_exchange(all_models, modelpaths, metabolite):\n",
+    "def add_exchange(all_models, modelpaths, metabolite):\n",
     "    for model, path in zip(all_models, modelpaths):\n",
     "        try:\n",
     "            model.add_boundary(model.metabolites.get_by_id(metabolite), type=\"exchange\")\n",
+    "            print(f'EX_{metabolite} added to {model.id}.')\n",
     "            cobra.io.write_sbml_model(model, path)\n",
     "            model_annot = rg.io.load_model_libsbml(path)\n",
-    "            rea = model_annot.getReaction(f'R_EX_{metabolite}')\n",
-    "            rg.cvterms.add_cv_term_reactions(f'EX_{metabolite}', 'BIGG', rea)\n",
-    "            rg.io.write_to_file(model_annot, path)\n",
-    "            print(f'EX_{metabolite} added to {model.id}.')\n",
     "        except (ValueError):\n",
-    "            print(f'EX_{metabolite} already exists in {model.id}.')"
+    "            print(f'EX_{metabolite} already exists in {model.id}.')\n",
+    "            \n",
+    "def annotate_exchange(modelpaths, metabolite):\n",
+    "    for path in modelpaths:\n",
+    "        model= rg.io.load_model_libsbml(path)\n",
+    "        print(f'Synchronize annotations for all compartments for {model.getId()}')\n",
+    "        model = rg.curate.update_annotations_from_others(model)\n",
+    "        rea = model.getReaction(f'R_EX_{metabolite}')\n",
+    "        try:\n",
+    "            uri = rg.cvterms.parse_id_from_cv_term(rea, 'BIGG')\n",
+    "            print(f'EX_{metabolite} is already annotated: {uri}')\n",
+    "        except (AttributeError):\n",
+    "            print(f'Add BiGG ID of EX_{metabolite} as CVTerm to {model.id}')\n",
+    "            rg.cvterms.add_cv_term_reactions(f'EX_{metabolite}', 'BIGG', rea)\n",
+    "        rg.io.write_to_file(model, path)"
    ]
   },
   {
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAabcO: atp_c + h2o_c + na1_c --> adp_c + h_c + na1_e + pi_c\n",
+      "NAt3_2: 2.0 h_e + na1_c --> 2.0 h_c + na1_e\n",
+      "GLUt4: glu__L_e + na1_e --> glu__L_c + na1_c\n",
+      "PROt4: na1_e + pro__L_e --> na1_c + pro__L_c\n",
+      "ALAt4: ala__L_e + na1_e --> ala__L_c + na1_c\n",
+      "NAt3_1: h_e + na1_c --> h_c + na1_e\n",
+      "EX_na1_e: na1_e <=> \n",
+      "MALt5: mal__L_e + na1_e --> mal__L_p + na1_p\n",
+      "NAt3_15: 3.0 h_e + 2.0 na1_c --> 3.0 h_c + 2.0 na1_e\n"
+     ]
+    }
+   ],
    "source": [
     "for rea in all_models[4].metabolites.get_by_id('na1_e').reactions:\n",
     "    print(rea)"
@@ -103,11 +130,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The metabolite na1_e is in fda_1054\n",
+      "The metabolite na1_e is in fda_1197\n",
+      "The metabolite na1_e is in fda_1115\n",
+      "The metabolite na1_e is in fda_1116\n",
+      "The metabolite na1_e is in KC_Na_01\n"
+     ]
+    }
+   ],
    "source": [
-    "add_and_annotate_exchange(all_models, modelpaths, 'na1_e')"
+    "for model in all_models:\n",
+    "    try:\n",
+    "        met = model.metabolites.get_by_id('na1_e')\n",
+    "        print(f'The metabolite {met} is in {model.id}')\n",
+    "    except (KeyError):\n",
+    "        print(f'Not in {model.id}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synchronize annotations for all compartments for fda_1054\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to fda_1054\n",
+      "Modified model written to ../../models/Cstr_TS.xml\n",
+      "Synchronize annotations for all compartments for fda_1197\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to fda_1197\n",
+      "Modified model written to ../../models/Cstr_1197.xml\n",
+      "Synchronize annotations for all compartments for fda_1115\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to fda_1115\n",
+      "Modified model written to ../../models/Cstr_1115.xml\n",
+      "Synchronize annotations for all compartments for fda_1116\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to fda_1116\n",
+      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for KC_Na_01\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to KC_Na_01\n",
+      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_exchange(all_models, modelpaths, 'na1_e')\n",
+    "annotate_exchange(modelpaths, 'na1_e')"
    ]
   },
   {
@@ -120,25 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ni2_e\n",
-      "ni2_e\n",
-      "ni2_e\n",
-      "ni2_e\n",
-      "ni2_e\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in all_models:\n",
     "    try:\n",
-    "        print(model.metabolites.get_by_id('ni2_e'))\n",
+    "        met = model.metabolites.get_by_id('ni2_e')\n",
+    "        print(f'The metabolite {met} is in {model.id}')\n",
     "    except (KeyError):\n",
     "        print(f'Not in {model.id}')"
    ]
@@ -153,40 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>ni2_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>Nickel</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x07f82a99044f0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>Ni</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 3 reaction(s)</strong></td><td>\n",
-       "                    NI2tex, NIabc, EX_ni2_e</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ],
-      "text/plain": [
-       "<Metabolite ni2_e at 0x7f82a99044f0>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_models[0].metabolites.get_by_id('ni2_e')"
    ]
@@ -207,28 +241,44 @@
    "outputs": [],
    "source": [
     "ni2_e = cobra.Metabolite('ni2_e', formula='Ni', name='Nickel', compartment='e')\n",
-    "all_models[4].metabolites.add(ni2_e)"
+    "#all_models[4].metabolites.add(ni2_e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EX_na1_e already exists in fda_1054\n",
-      "EX_na1_e already exists in fda_1197\n",
-      "EX_na1_e already exists in fda_1115\n",
-      "EX_na1_e already exists in fda_1116\n",
-      "EX_na1_e already exists in KC_Na_01\n"
+      "EX_ni2_e already exists in fda_1054.\n",
+      "EX_ni2_e already exists in fda_1197.\n",
+      "EX_ni2_e already exists in fda_1115.\n",
+      "EX_ni2_e already exists in fda_1116.\n",
+      "EX_ni2_e already exists in KC_Na_01.\n",
+      "Synchronize annotations for all compartments for fda_1054\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1054\n",
+      "Modified model written to ../../models/Cstr_TS.xml\n",
+      "Synchronize annotations for all compartments for fda_1197\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1197\n",
+      "Modified model written to ../../models/Cstr_1197.xml\n",
+      "Synchronize annotations for all compartments for fda_1115\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1115\n",
+      "Modified model written to ../../models/Cstr_1115.xml\n",
+      "Synchronize annotations for all compartments for fda_1116\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1116\n",
+      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for KC_Na_01\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to KC_Na_01\n",
+      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
      ]
     }
    ],
    "source": [
-    "add_and_annotate_exchange(all_models, modelpaths, 'ni2_e')"
+    "add_exchange(all_models, modelpaths, 'ni2_e')\n",
+    "annotate_exchange(modelpaths, 'ni2_e')"
    ]
   },
   {
@@ -241,25 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "btn_e\n",
-      "btn_e\n",
-      "Not in fda_1115\n",
-      "Not in fda_1116\n",
-      "Not in KC_Na_01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in all_models:\n",
     "    try:\n",
-    "        print(model.metabolites.get_by_id('btn_e'))\n",
+    "        met = model.metabolites.get_by_id('btn_e')\n",
+    "        print(f'The metabolite {met} is in {model.id}')\n",
     "    except (KeyError):\n",
     "        print(f'Not in {model.id}')"
    ]
@@ -274,59 +313,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>btn_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>Biotin</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x07f829929af70</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>C10H15N2O3S</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 4 reaction(s)</strong></td><td>\n",
-       "                    BTNt2i, EX_btn_e, BTNTe, BTNt</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ],
-      "text/plain": [
-       "<Metabolite btn_e at 0x7f829929af70>"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_models[0].metabolites.get_by_id('btn_e')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "btn_e = cobra.Metabolite('btn_e', formula='C10H15N2O3S', name='Biotin', compartment='e')\n",
-    "all_models[2].metabolites.add(btn_e)\n",
-    "all_models[3].metabolites.add(btn_e)\n",
-    "all_models[4].metabolites.add(btn_e)"
+    "#all_models[2].metabolites.add(btn_e)\n",
+    "#all_models[3].metabolites.add(btn_e)\n",
+    "#all_models[4].metabolites.add(btn_e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -337,13 +345,108 @@
       "EX_btn_e already exists in fda_1197.\n",
       "EX_btn_e already exists in fda_1115.\n",
       "EX_btn_e already exists in fda_1116.\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n",
-      "EX_btn_e added to KC_Na_01.\n"
+      "EX_btn_e already exists in KC_Na_01.\n",
+      "Synchronize annotations for all compartments for fda_1054\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to fda_1054\n",
+      "Modified model written to ../../models/Cstr_TS.xml\n",
+      "Synchronize annotations for all compartments for fda_1197\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to fda_1197\n",
+      "Modified model written to ../../models/Cstr_1197.xml\n",
+      "Synchronize annotations for all compartments for fda_1115\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to fda_1115\n",
+      "Modified model written to ../../models/Cstr_1115.xml\n",
+      "Synchronize annotations for all compartments for fda_1116\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to fda_1116\n",
+      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for KC_Na_01\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to KC_Na_01\n",
+      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
      ]
     }
    ],
    "source": [
-    "add_and_annotate_exchange(all_models, modelpaths, 'btn_e')"
+    "add_exchange(all_models, modelpaths, 'btn_e')\n",
+    "annotate_exchange(modelpaths, 'btn_e')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Protocatechuic acid / 3,4-Dihydroxybenzoate\n",
+    "Is a carbon source for *C. glutamicum*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for model in all_models:\n",
+    "    try:\n",
+    "        met = model.metabolites.get_by_id('34dhbz_e')\n",
+    "        print(f'The metabolite {met} is in {model.id}')\n",
+    "    except (KeyError):\n",
+    "        print(f'Not in {model.id}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_models[4].metabolites.get_by_id('34dhbz_e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca_e = cobra.Metabolite('34dhbz_e', formula='C7H5O4', name='3,4-Dihydroxybenzoate / Protocatechuic acid', compartment='e')\n",
+    "#for i in [0,1,2,3]:\n",
+    "#    all_models[i].metabolites.add(pca_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EX_34dhbz_e already exists in fda_1054.\n",
+      "EX_34dhbz_e already exists in fda_1197.\n",
+      "EX_34dhbz_e already exists in fda_1115.\n",
+      "EX_34dhbz_e already exists in fda_1116.\n",
+      "EX_34dhbz_e already exists in KC_Na_01.\n",
+      "Synchronize annotations for all compartments for fda_1054\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1054\n",
+      "Modified model written to ../../models/Cstr_TS.xml\n",
+      "Synchronize annotations for all compartments for fda_1197\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1197\n",
+      "Modified model written to ../../models/Cstr_1197.xml\n",
+      "Synchronize annotations for all compartments for fda_1115\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1115\n",
+      "Modified model written to ../../models/Cstr_1115.xml\n",
+      "Synchronize annotations for all compartments for fda_1116\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1116\n",
+      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for KC_Na_01\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to KC_Na_01\n",
+      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_exchange(all_models, modelpaths, '34dhbz_e')\n",
+    "annotate_exchange(modelpaths, '34dhbz_e')"
    ]
   }
  ],
