add SBO terms to new metabs #5

--- a/code/curation/wetlab_transfer.ipynb
+++ b/code/curation/wetlab_transfer.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,6 @@
     "            model.add_boundary(model.metabolites.get_by_id(metabolite), type=\"exchange\")\n",
     "            print(f'EX_{metabolite} added to {model.id}.')\n",
     "            cobra.io.write_sbml_model(model, path)\n",
-    "            model_annot = rg.io.load_model_libsbml(path)\n",
     "        except (ValueError):\n",
     "            print(f'EX_{metabolite} already exists in {model.id}.')\n",
     "            \n",
@@ -240,13 +239,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ni2_e = cobra.Metabolite('ni2_e', formula='Ni', name='Nickel', compartment='e')\n",
+    "ni2_e = cobra.Metabolite('ni2_e', formula='Ni', name='Nickel', compartment='e', )\n",
     "#all_models[4].metabolites.add(ni2_e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +374,57 @@
    "metadata": {},
    "source": [
     "### 4. Protocatechuic acid / 3,4-Dihydroxybenzoate\n",
-    "Is a carbon source for *C. glutamicum*."
+    "Is a carbon source for *C. glutamicum*. Is present in the model of the type strain `iCGB21FR.xml` described [here](https://www.frontiersin.org/articles/10.3389/fmicb.2021.750206/full)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SBML package 'layout' not supported by cobrapy, information is not parsed\n",
+      "https://juser.fz-juelich.de/record/188973 does not conform to 'http(s)://identifiers.org/collection/id' or'http(s)://identifiers.org/COLLECTION:id\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Metabolite identifier</strong></td><td>34dhbz_c</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>3,4-Dihydroxybenzoate</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x07fda82743f40</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Formula</strong></td><td>C7H5O4</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartment</strong></td><td>c</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>In 5 reaction(s)</strong></td><td>\n",
+       "                    VNTDM, 4HBHYOX, 3_4DHBZt2, PCADYOX, DHSKDH</td>\n",
+       "            </tr>\n",
+       "        </table>"
+      ],
+      "text/plain": [
+       "<Metabolite 34dhbz_c at 0x7fda82743f40>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mod = rg.io.load_model_cobra('/Users/baeuerle/Organisation/Masterarbeit/Nextcloud/Examples/iCGB21FR/iCGB21FR.xml')\n",
+    "mod.metabolites.get_by_id('34dhbz_c')\n",
+    "#mod.reactions.get_by_id('3_4DHBZt2')"
    ]
   },
   {
@@ -447,6 +496,38 @@
    "source": [
     "add_exchange(all_models, modelpaths, '34dhbz_e')\n",
     "annotate_exchange(modelpaths, '34dhbz_e')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set SBO terms for all newly added metabolites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified model written to ../../models/Cstr_TS.xml\n",
+      "Modified model written to ../../models/Cstr_1197.xml\n",
+      "Modified model written to ../../models/Cstr_1115.xml\n",
+      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "for path in modelpaths:\n",
+    "    model = rg.io.load_model_libsbml(path)\n",
+    "    rg.sboann.addSBOforMetabolites(model)\n",
+    "    rg.io.write_to_file(model, path)"
    ]
   }
  ],
