exploration on CGXII #2

--- a/code/analysis/additives_CGXII.ipynb
+++ b/code/analysis/additives_CGXII.ipynb
@@ -6,16 +6,31 @@
    "metadata": {},
    "source": [
     "# Growth enhancing additives on CGXII medium\n",
-    "Author: Famke Baeuerle\n",
     "\n",
-    "This notebook holds growth simulation with different growth enhancing metabolites for all strains."
+    "This notebook holds growth simulation with different growth enhancing metabolites for all strains.\n",
+    "\n",
+    "*Author: Famke Baeuerle*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CPLEX is available but could not load with error:\n",
+      "  Traceback (most recent call last):\n",
+      "    File \"/Users/baeuerle/Library/Python/3.9/lib/python/site-packages/optlang/__init__.py\", line 43, in <module>\n",
+      "      from optlang import cplex_interface\n",
+      "    File \"/Users/baeuerle/Library/Python/3.9/lib/python/site-packages/optlang/cplex_interface.py\", line 32, in <module>\n",
+      "      from cplex.exceptions import CplexSolverError\n",
+      "  ModuleNotFoundError: No module named 'cplex.exceptions'\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "from libsbml import *\n",
@@ -41,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,27 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['EX_lys__L_e', 'EX_his__L_e', 'EX_arg__L_e', 'EX_asp__L_e', 'EX_thr__L_e', 'EX_glu__L_e', 'EX_gly_e', 'EX_val__L_e', 'EX_met__L_e', 'EX_ile__L_e', 'EX_leu__L_e', 'EX_tyr__L_e', 'EX_phe__L_e']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "CasA = rg.growth.load_all_media_from_db('../../../refinegems/data/media_db.csv')[9]['BiGG_EX'].to_list()\n",
+    "CasA = rg.io.load_all_media_from_db('../../../refinegems/data/media_db.csv')[9]['BiGG_EX'].to_list()\n",
     "CGXII = pd.read_csv('../../analysis/CGXII_base_medium/CGXII.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## strain 16"
+    "## Strain 1115"
    ]
   },
   {
@@ -304,10 +312,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## strain 15"
+    "## Strain 1197"
    ]
   },
   {
@@ -441,10 +450,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## strain 14"
+    "## Strain TS"
    ]
   },
   {
@@ -564,10 +574,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## strain 17"
+    "## Strain 1116"
    ]
   },
   {
@@ -796,6 +807,82 @@
     "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All models with CasA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CasA = rg.io.load_all_media_from_db('../../../refinegems/data/media_db.csv')[9]['BiGG_EX'].to_list()\n",
+    "modelpaths = ['../../models/Cstr_TS.xml', '../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml', '../../models/Cstr_1116.xml']\n",
+    "cmods = [rg.io.load_model_cobra(path) for path in modelpaths]\n",
+    "cgx_paths = ['../../analysis/CGXII_base_medium/CGXII_comp_14.csv', '../../analysis/CGXII_base_medium/CGXII_comp_15.csv', '../../analysis/CGXII_base_medium/CGXII_comp_16.csv', '../../analysis/CGXII_base_medium/CGXII_comp_17.csv']\n",
+    "cgx_bases = [pd.read_csv(path).set_index('exchange').to_dict()['flux'] for path in cgx_paths]\n",
+    "cgx_co = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_co.csv').set_index('exchange').to_dict()['flux']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fda_1054\n",
+      "Growth rate with additives: 0.6354\n",
+      "Doubling time with additives: 65.45 min\n",
+      "fda_1197\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/s0/m197rw591kxcl13y56pqhf9m0000gs/T/ipykernel_12673/3608260857.py:52: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  dt = (np.log(2) / sol.objective_value) * 60\n",
+      "/var/folders/s0/m197rw591kxcl13y56pqhf9m0000gs/T/ipykernel_12673/3608260857.py:52: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  dt = (np.log(2) / sol.objective_value) * 60\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate with additives: 0.0\n",
+      "Doubling time with additives: inf min\n",
+      "fda_1115\n",
+      "Growth rate with additives: 0.0\n",
+      "Doubling time with additives: inf min\n",
+      "fda_1116\n",
+      "Growth rate with additives: 0.0\n",
+      "Doubling time with additives: inf min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/s0/m197rw591kxcl13y56pqhf9m0000gs/T/ipykernel_12673/3608260857.py:52: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  dt = (np.log(2) / sol.objective_value) * 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model, medium in zip(cmods, cgx_bases):\n",
+    "    print(model.id)\n",
+    "    enhanced_growth(model, cgx_co, CasA)"
+   ]
   }
  ],
  "metadata": {
@@ -814,12 +901,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
+   "version": "3.9.4 (v3.9.4:1f2e3088f3, Apr  4 2021, 12:32:44) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b335ed1da5a1ff03f60c6f2b8d73ad245c1a6cb27799af2b559ab4e2e6d580ce"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
