--- a/code/analysis/exploration_CGXII.ipynb
+++ b/code/analysis/exploration_CGXII.ipynb
@@ -5,10 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Medium exploration\n",
-    "Author: Famke Baeuerle\n",
+    "# CGXII medium exploration\n",
     "\n",
-    "This serves as notebook to look at different metabolites or reactions or ... in the GEMs present in this repository. "
+    "This serves as notebook to look at different metabolites or reactions in the GEMs present in this repository. \n",
+    "\n",
+    "*Author: Famke Baeuerle*"
    ]
   },
   {
@@ -37,32 +38,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaling...\n",
-      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
-      "Problem data seem to be well scaled\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../models/Cstr_TS.xml')"
+    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Focus: Protocatechuic acid (PCA)\n",
+    "## Focus: Protocatechuic acid (PCA)\n",
     "PCA is part of the CGXII medium which is of interest at the moment because this might be the minimal medium we need for more laboratory experiments."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,22 +68,22 @@
        "                <td><strong>Name</strong></td><td>3,4-Dihydroxybenzoate</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x07f98b2c1dbb0</td>\n",
+       "                <td>0x07fee318f03d0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Formula</strong></td><td>C7H5O4</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Compartment</strong></td><td>c</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>In 2 reaction(s)</strong></td><td>\n",
-       "                    PCADYOX, VNTDM</td>\n",
+       "                    VNTDM, PCADYOX</td>\n",
        "            </tr>\n",
        "        </table>"
       ],
       "text/plain": [
-       "<Metabolite 34dhbz_c at 0x7f98b2c1dbb0>"
+       "<Metabolite 34dhbz_c at 0x7fee318f03d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,10 +417,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. L-cysteinylglycine (`cgly`)"
+    "#### 1. L-cysteinylglycine (`cgly`)"
    ]
   },
   {
@@ -614,10 +607,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. β-nicotinamide D-ribonucleotide (`nmn`)"
+    "#### 2. β-nicotinamide D-ribonucleotide (`nmn`)"
    ]
   },
   {
@@ -698,10 +692,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Beta-Alanine (`ala_B`)"
+    "#### 3. Beta-Alanine (`ala_B`)"
    ]
   },
   {
@@ -809,10 +804,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Sodium (`na1`)"
+    "#### 1. Sodium (`na1`)"
    ]
   },
   {
@@ -852,10 +848,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Nickel (`ni2`)\n",
+    "#### 2. Nickel (`ni2`)\n",
     "\n",
     "Nickel is an essential trace element for bacteria as a cofactor of several well-characterized enzymes (Sevilla 2021)."
    ]
@@ -890,10 +887,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Biotin (`btn`)"
+    "#### 3. Biotin (`btn`)"
    ]
   },
   {
@@ -927,10 +925,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. PCA (`34dhbz`)\n",
+    "#### 4. PCA (`34dhbz`)\n",
     "\n",
     "Seems to be carbon source for _C. glutamicum_"
    ]
@@ -1047,16 +1046,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seems to be part of the energy metabolism???"
+    "Seems to be part of the energy metabolism."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "rg",
    "language": "python",
    "name": "python3"
   },
@@ -1070,12 +1070,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b335ed1da5a1ff03f60c6f2b8d73ad245c1a6cb27799af2b559ab4e2e6d580ce"
+    "hash": "d346240008253c0833d91dc133a0f72ff509568477a857db219647a824e7753e"
    }
   }
  },
