clean-up analysis scripts #2

--- a/code/analysis/growth_M9_all.ipynb
+++ b/code/analysis/growth_M9_all.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Simulation of M9 medium with and without Casamino acids\n",
-    "Author: Famke Baeuerle"
+    "*Author: Famke Baeuerle*"
    ]
   },
   {
@@ -971,12 +971,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
+   "version": "3.9.4 (v3.9.4:1f2e3088f3, Apr  4 2021, 12:32:44) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b335ed1da5a1ff03f60c6f2b8d73ad245c1a6cb27799af2b559ab4e2e6d580ce"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
