revise gene essentiality #2

--- a/code/analysis/visualization.ipynb
+++ b/code/analysis/visualization.ipynb
@@ -471,6 +471,110 @@
     "plt.barh(range(len(sel)), values, tick_label=names)\n",
     "plt.xlabel('Count', fontsize=15)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Growth simulation as nice table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llrrl}\n",
+      "\\toprule\n",
+      "model & medium &  doubling\\_time [min] &  growth\\_value &                                                       complete \\\\\n",
+      "\\midrule\n",
+      "   TS &   RPMI &                  NaN &           0.0 &                     EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_mn2\\_e, EX\\_zn2\\_e \\\\\n",
+      " 1197 &   RPMI &                61.91 &        0.6717 &           EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_zn2\\_e \\\\\n",
+      " 1115 &   RPMI &                55.77 &        0.7457 &           EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_zn2\\_e \\\\\n",
+      " 1116 &   RPMI &                52.63 &        0.7902 & EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_nmn\\_e, EX\\_zn2\\_e \\\\\n",
+      "   TS &  CGXII &                75.82 &        0.5485 &                                                   EX\\_cobalt2\\_e \\\\\n",
+      " 1197 &  CGXII &                  NaN &           0.0 &                                     EX\\_cobalt2\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      " 1115 &  CGXII &                74.33 &        0.5596 &                             EX\\_cobalt2\\_e, EX\\_pnto\\_\\_R\\_e, EX\\_s\\_e \\\\\n",
+      " 1116 &  CGXII &                  NaN &          -0.0 &                           EX\\_cobalt2\\_e, EX\\_nmn\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      "   TS &     LB &                57.82 &        0.7192 &                                                           True \\\\\n",
+      " 1197 &     LB &                59.68 &        0.6969 &                                                           True \\\\\n",
+      " 1115 &     LB &                50.34 &        0.8262 &                                                           True \\\\\n",
+      " 1116 &     LB &                50.62 &        0.8215 &                                                       EX\\_nmn\\_e \\\\\n",
+      "   TS &     M9 &                75.81 &        0.5486 &                                                           True \\\\\n",
+      " 1197 &     M9 &                  NaN &           0.0 &                                                   EX\\_pnto\\_\\_R\\_e \\\\\n",
+      " 1115 &     M9 &                74.31 &        0.5596 &                                           EX\\_pnto\\_\\_R\\_e, EX\\_s\\_e \\\\\n",
+      " 1116 &     M9 &                  NaN &          -0.0 &                                         EX\\_nmn\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.set_option('display.float_format', str)\n",
+    "def_upt = pd.read_csv('../../analysis/growth_sim_comp/growth_20230307_default_uptake.csv')\n",
+    "def_upt = def_upt[def_upt['medium'].isin(['LB', 'RPMI', 'M9', 'CGXlab'])]\n",
+    "def_upt = def_upt.replace(STRAINS).replace(MEDIA)\n",
+    "def_upt['growth_value'] = def_upt['growth_value'].round(4)\n",
+    "def_upt['doubling_time [min]'] = def_upt['doubling_time [min]'].round(2)\n",
+    "def_upt[def_upt[['growth_value', 'doubling_time [min]']] > 500] = np.nan\n",
+    "def_upt[def_upt[['growth_value', 'doubling_time [min]']] < 0] = np.nan\n",
+    "with pd.option_context(\"max_colwidth\", 100):\n",
+    "    print(def_upt.to_latex(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llrrl}\n",
+      "\\toprule\n",
+      "model & medium &  doubling\\_time [min] &  growth\\_value &                                                       complete \\\\\n",
+      "\\midrule\n",
+      "   TS &   RPMI &                60.02 &        0.6929 &           EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_zn2\\_e \\\\\n",
+      " 1197 &   RPMI &                61.91 &        0.6717 &           EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_zn2\\_e \\\\\n",
+      " 1115 &   RPMI &                55.77 &        0.7457 &           EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_zn2\\_e \\\\\n",
+      " 1116 &   RPMI &                52.63 &        0.7902 & EX\\_cobalt2\\_e, EX\\_cu2\\_e, EX\\_fe2\\_e, EX\\_mn2\\_e, EX\\_nmn\\_e, EX\\_zn2\\_e \\\\\n",
+      "   TS &  CGXII &                75.82 &        0.5485 &                                                   EX\\_cobalt2\\_e \\\\\n",
+      " 1197 &  CGXII &                 75.2 &         0.553 &                            EX\\_ala\\_B\\_e, EX\\_cgly\\_e, EX\\_cobalt2\\_e \\\\\n",
+      " 1115 &  CGXII &                74.43 &        0.5587 &                          EX\\_cgly\\_e, EX\\_cobalt2\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      " 1116 &  CGXII &                  NaN &          -0.0 &                           EX\\_cobalt2\\_e, EX\\_nmn\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      "   TS &     LB &                57.82 &        0.7192 &                                                           True \\\\\n",
+      " 1197 &     LB &                59.68 &        0.6969 &                                                           True \\\\\n",
+      " 1115 &     LB &                50.34 &        0.8262 &                                                           True \\\\\n",
+      " 1116 &     LB &                50.62 &        0.8215 &                                                       EX\\_nmn\\_e \\\\\n",
+      "   TS &     M9 &                75.81 &        0.5486 &                                                           True \\\\\n",
+      " 1197 &     M9 &                75.19 &        0.5531 &                                          EX\\_ala\\_B\\_e, EX\\_cgly\\_e \\\\\n",
+      " 1115 &     M9 &                74.42 &        0.5588 &                                        EX\\_cgly\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      " 1116 &     M9 &                  NaN &           0.0 &                                         EX\\_nmn\\_e, EX\\_pnto\\_\\_R\\_e \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.set_option('display.float_format', str)\n",
+    "def_upt = pd.read_csv('../../analysis/growth_sim_comp/growth_20230307_minimal_uptake.csv')\n",
+    "def_upt = def_upt[def_upt['medium'].isin(['LB', 'RPMI', 'M9', 'CGXlab'])]\n",
+    "def_upt = def_upt.replace(STRAINS).replace(MEDIA)\n",
+    "def_upt['growth_value'] = def_upt['growth_value'].round(4)\n",
+    "def_upt['doubling_time [min]'] = def_upt['doubling_time [min]'].round(2)\n",
+    "def_upt[def_upt[['growth_value', 'doubling_time [min]']] > 500] = np.nan\n",
+    "def_upt[def_upt[['growth_value', 'doubling_time [min]']] < 0] = np.nan\n",
+    "with pd.option_context(\"max_colwidth\", 100):\n",
+    "    print(def_upt.to_latex(index=False))"
+   ]
   }
  ],
  "metadata": {
